# AI_legal_LLM

./: .env.example  README.md  docker-compose.yml  legal_ai.db  pilot-report.json
backend/: Dockerfile  README.md  alembic.ini  legal_ai.db  pyproject.toml  seed.py  seed_demo.py  test.db
backend/alembic/: env.py
backend/alembic/versions/: 20260529_0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/integrations/: court_data_adapter.py  fns_company_adapter.py  russian_post_adapter.py
backend/app/models/: __init__.py  entities.py
backend/app/prompts/: __init__.py  prompt_registry.py
backend/app/repositories/: audit_repository.py
backend/app/schemas/: audit.py  case.py  checklist.py  claim.py  court_import.py  document.py  employee.py  extraction.py  integration.py  organization.py  pilot_feedback.py  pilot_metrics.py  postal_dispatch.py  power_of_attorney.py  pretension.py  rag.py  sandbox_pilot.py  settings.py  signatory.py  system.py  user.py  workflow.py
backend/app/services/: audit_service.py  auth_service.py  authority_service.py  case_service.py  checklist_service.py  claim_service.py  court_import_service.py  document_pipeline_service.py  document_processing_service.py  document_service.py  embedding_service.py  export_service.py  extraction_service.py  integration_approval_service.py  integration_service.py  llm_service.py  organization_service.py  pilot_feedback_service.py  pilot_metrics_service.py  pilot_timeline_service.py  (+9 more)
(+241 files in other folders)
