[project]
name = "legal-ai-backend"
version = "0.1.0"
description = "Local Legal LLM MVP backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.1",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.4",
  "psycopg[binary]>=3.2.1",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "uvicorn>=0.30.6",
]

[project.optional-dependencies]
test = ["pytest>=8.3.2"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-p no:cacheprovider"
